--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 </div>
         {% block javascripts %}{% endblock %}
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>    
@@ -35,5 +35,24 @@ function getModels(val) {
   });
 }
 </script>
+<script type="text/javascript">
+$(function(){
+$('#ads_maker').change(function(){
+
+  var val =document.getElementById("ads_maker").value;  
+    console.log(val);
+  $.ajax({
+  type: "GET",
+  url: "/cardealer/public/index.php/models/api/" +val,
+  data:'model='+val,
+  success: function(data){
+    $("#ads_model").html(data);
+
+  }
+  });
+})
+});
+</script>
+
   </body>
 </html>
