--- a/templates/message/index.html.twig
+++ b/templates/message/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Messages index{% endblock %}
 
 {% block body %}
-    <h2>Messages index: you have {{seen}} new messages</h2>
+    <h2>Messages Inbox: you have {{seen}} new messages</h2>
 
     <table class="table">
         <thead>
