--- a/templates/ads/edit.html.twig
+++ b/templates/ads/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Edit Ads{% endblock %}
 
 {% block body %}
-    <h1>Edit Ad</h1>
+    <h1>Edit Ad {{ad.maker}} {{ad.model}} {{ad.label}}</h1>
     <div class="row">
     	{% set i = 0 %}
     	{% if ad.pictures is defined  %}
@@ -18,7 +18,7 @@
 </div>
     {{ include('ads/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('ads_index')}}">back to list</a>
+    <a href="{{ path('search', {'contact':app.user.id}) }}">back to list</a>
 
     {{ include('ads/_delete_form.html.twig') }}
 {% endblock %}
