--- a/templates/ads/index.html (copy).twig
+++ b/templates/ads/index.html (copy).twig
@@ -1,57 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ads index{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
-    <h1>Ads index</h1>
+        {% include './assets/search.html.twig' %}
+                <h3>We have {{count|length}} ads</h3>
+    <div class="row">
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Maker</th>
-                <th>Model</th>
-                <th>Fuel</th>
-                <th>Volume</th>
-                <th>Price</th>
-                <th>Year</th>
-                <th>Body</th>
-                <th>Pictures</th>
-                <th>Equipment</th>
-                <th>About</th>
-                <th>Door</th>
-                <th>Contact</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
         {% for ad in ads %}
-            <tr>
-                <td>{{ ad.id }}</td>
-                <td>{{ ad.maker }}</td>
-                <td>{{ ad.model }}</td>
-                <td>{{ ad.fuel }}</td>
-                <td>{{ ad.volume }}</td>
-                <td>{{ ad.price }}</td>
-                <td>{{ ad.year }}</td>
-                <td>{{ ad.body }}</td>
-                <td>{{ ad.pictures ? ad.pictures|json_encode : '' }}</td>
-                <td>{{ ad.equipment ? ad.equipment|json_encode : '' }}</td>
-                <td>{{ ad.about }}</td>
-                <td>{{ ad.door }}</td>
-                <td>{{ ad.contact ? ad.contact|json_encode : '' }}</td>
-                <td>
-                    <a href="{{ path('ads_show', {'id': ad.id}) }}">show</a>
-                    <a href="{{ path('ads_edit', {'id': ad.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="14">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            <div class="col-3 my-2" style="border:1px solid cornsilk" >  
+                <div style="background: #f5f5f5" class="div">
+                    <p class="item-text">{{ad.maker ~ ' ' ~ ad.model}} <strong class="float-right">{{ad.price}}</strong></p>
+                    <a href="{{ path('ads_show', {'id': ad.id}) }}">
+                <img style="width: auto; height: 180px;" 
+    class="w-100" src="{% if ad.pictures[0] is defined %}{{ asset('images/')}}{{  ad.pictures[0] }}
+    {% else %}https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg{% endif %}" alt="">
+            </a>
+                </div>
 
-    <a href="{{ path('ads_new') }}">Create new</a>
+            </div>
+        {% endfor %}
+    </div>
+                <div class="d-flex justify-content-center">
+        {% if count is defined and count|length > 12  %}
+            {% for i in 1..((count|length) / 12) | round(0, 'ceil') %}
+            {% if i >= 1 and count|length > 0 %}
+                <a class="btn btn-info px-3" href="{{ path('ads_index', {'pagination': i-1}) }}?{{ app.request.querystring }}">{{i}}</a>
+            {% endif %}
+            {% endfor %}
+        {% endif %}
+    </div>
 {% endblock %}
