--- a/templates/assets/footer.html.twig
+++ b/templates/assets/footer.html.twig
@@ -1,7 +1,7 @@
 
     <footer class="footer">
       <div class="row">
-        <div class="col-6">
+        <div class="col-sm-6">
         	<h3>Most wanted</h3>
         	<div class="row">
 				<div class="col-4 footerbtn">
@@ -11,10 +11,8 @@
 
 				</div>
 
-
-
 				<div class="col-4 footerbtn">
-					<a href="http://www.localhost.test/cardealer/public/index.php/ads/search?maker=Alfa+Rome&model=159">Alfa 159</a>
+					<a href="http://www.localhost.test/cardealer/public/index.php/ads/search?maker=Alfa+Romeo&model=159">Alfa 159</a>
 					<a href="http://www.localhost.test/cardealer/public/index.php/ads/search?maker=Ford&model=+fiesta">Ford Fiesta</a>
 					<a href="http://www.localhost.test/cardealer/public/index.php/ads/search?maker=Opel&model=+insignia">Opel Insignia</a>
 				</div>
@@ -27,33 +25,35 @@
 				</div>
 			</div>	
 
-
-        <div class="col-3">
-        	
+        <div class="col-sm-3">
+        	 <h3>Links</h3>
         	<ul>
-        		<h3>Links</h3>
-        		<li>About us</li>
-        		<li>FAQ</li>
-        		<li>Legal</li>
-        		<li>Mobile app</li>
-        		<li>Other</li>
+        		<li><a href="#">About us</a></li>
+        		<li><a href="#">FAQ</a></li>
+        		<li><a href="#">Legal</a></li>
+        		<li><a href="#">Mobile App</a></li>
+            <li><a href="#">Other</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Mail us</a></li>
         	</ul>
         </div>
 
-        <div class="col-3">
-        	
+        <div class="col-sm-3">
+        <h3>Contact</h3>
         	<ul>
-        		<h3>Contact</h3>
 	        	<li>contact@cardealer.com </li>
 	        	<li>024 415-53-45</li>
 	        	<li> Radno vreme:Ponedeljak – petak, od 8 do 16 časova. </li>
         	</ul>
         </div>
       </div>
+      <hr style="  border-top: 1px solid white;">
       <div class="row">
-      	<div class="col d-flex justify-content-center"><p>
+      	<div class="col d-flex justify-content-center"><p class="px-1">
       		All Trademarks referred to are the property of their respective owners. 
       	</p></div>
-      	
+      
+   	
       </div>
+       <div class="d-flex justify-content-center">CarDealer {{ "now"|date("Y") }} </div>
     </footer>
