--- a/templates/ads/search.html.twig
+++ b/templates/ads/search.html.twig
@@ -10,7 +10,7 @@
             </div>
             <div class="col-6">
                 <form action="/cardealer/public/index.php/ads/search" method="GET" class="form-inline float-right">
-                  <div class="form-group">
+                  <div class="form-group  px-2">
                     <select class="form-control" id="exampleFormControlSelect1" name="sort">
                       <option value="">Sort by...</option>
                         <option value="price ASC">Price ASC</option>
@@ -32,22 +32,26 @@
     <div class="row">
 
         {% for ad in ads %}
-            <div class="col-9 p-1" >  
-                <div class="row d-block py-2"  style="background: #f5f5f5" >
+            <div class="col-sm-12 " >  
+                <div class="row d-block"  style="background: #f5f5f5" >
 
-                    <div class="div">
-                        <p class="item-text px-1">{{ad.maker ~ ' ' ~ ad.model}} 
-                        <strong class="float-right">{{ad.price}}E</strong></p>
+                    <div class="searchitem">
+                        <h3 class="item-text">{{ad.maker ~ ' ' ~ ad.model}}
+                        <strong class="float-right priceindex">{{ad.price}}E</strong></h3>
                     </div>
-                    <div class="row">
-                    <div class="col-4"><a href="{{ path('ads_show', {'id': ad.id}) }}">
-                        <img style="width: 180px; height: auto;" 
-                        class="w-100" src="{% if ad.pictures[0] is defined %}{{ asset('images/')}}{{  ad.pictures[0] }}
-                        {% else %}https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg{% endif %}" alt="">
-                    </a>
+                    <div class="row searchitem-body">
+                    <div class="col-4">
+
+                        <a class="" href="{{ path('ads_show', {'id': ad.id}) }}"> 
+         <p class="item-text"><strong class="float-right priceindex">{{ad.pictures|length}} <i class="fas fa-camera-retro"></i></strong></p> 
+            <div style="min-width:100%;height:200px; background-size:cover;   background-position:center; background-image: url({% if ad.pictures[0] is defined %}{{ asset('images/')}}{{  ad.pictures[0] }}
+    {% else %}https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg{% endif %})"> 
+    
+            </div>
+            </a>
                     </div>
                     <div class="col-8">
-                        <div>{{ad.year}}.  |  {{ad.mileage}}km  |  {{ad.fuel}}  |  {{ad.body}}</div>
+                        <div>{{ad.year}}.  |  {{ad.mileage}}km  |  {{ad.fuel|title}}  |  {{ad.body|title}}</div>
                         <div>  {{ad.hp}} ks, {{ad.gearchange}}, {{ad.aircon}} Air conditioning</div>
                         <div>{{ad.door}} doors, {{ad.seats}} seats, {{ad.insurance}}</div>
                        <div>{{ad.mileage}} km</div>
@@ -61,11 +65,11 @@
         {% endfor %}
     </div>
 
-                <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center my-2">
         {% if count is defined and count|length > 12  %}
             {% for i in 1..((count|length) / 12) | round(0, 'ceil') %}
             {% if i >= 1 and count|length > 0 %}
-                <a class="btn btn-info px-3" href="{{ path('search', {'pagination': i-1}) }}?{{ app.request.querystring }}">{{i}}</a>
+            <a class="btn btn-info px-3" href="{{ path('search', {'pagination': i-1}) }}?{{ app.request.querystring }}">{{i}}</a>
             {% endif %}
             {% endfor %}
         {% endif %}
