--- a/templates/assets/navbar.html.twig
+++ b/templates/assets/navbar.html.twig
@@ -13,7 +13,7 @@
       {% if is_granted('ROLE_ADMIN') %}
       <li class="nav-item">
         <a class="nav-link" href="{{ path('models_new') }}">New Vehicle</a>
-      </li>
+      </li>   
       {% endif %}
        
       {% endif %}
@@ -27,7 +27,7 @@
               <a class="dropdown-item" href="{{ path('password_reset') }}">Change password</a>
               <a class="dropdown-item" href="{{ path('edituser') }}">Change contact data</a>
                <a class="dropdown-item" href="{{ path('search', {'contact':app.user.id}) }}">My ads</a>
-                <a class="dropdown-item" href="{{ path('allfavorites') }}">My favourite ads</a>
+                <a class="dropdown-item" href="{{ path('carsfavorites') }}">My favourite ads</a>
               <div class="dropdown-divider"></div>
               <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
             </div>  
