--- a/templates/bikes/favorites.html.twig
+++ b/templates/bikes/favorites.html.twig
@@ -4,35 +4,35 @@
 
 {% block body %}
 
-    <div class="row">
         <style type="text/css">
             .bigicons{
                 display: none;
             }
         </style>
-        <div class="row py-1 ">
+
+        <div class="row">
            <div class="col">
-            <a style="color:rgba(241,164,26,1);" class="px-2" href="{{ path('carsfavorites') }}"><i class="fas fa-car fa-2x"> Cars</a></i>
-            <a class="px-2" href="{{ path('bikesfavorites') }}"><i class="fas fa-motorcycle fa-2x"> Bikes</a></i>
+            <a class="px-2" href="{{ path('carsfavorites') }}"><i class="fas fa-car fa-2x"> Cars</a></i>
+            <a style="color:rgba(241,164,26,1);" class="px-2" href="{{ path('bikesfavorites') }}">
+                <i class="fas fa-motorcycle fa-2x"> Bikes</a></i>
             <a class="px-2" href="#"><i class="fas fa-truck fa-2x"> Trucks</i></a>
            </div>
-          </div>
         </div>
                
-      <div class="row">
+   <div class="row">
 
-        {% for ad in cars %}
+        {% for ad in bikes %}
             <div class="col-lg-12 p-3" >  
                 <div class="row d-block"  style="background: #f5f5f5" >
 
                     <div class="searchitem">
-                        <h3 class="item-text">{{ad.maker ~ ' ' ~ ad.model}}
+                        <h3 class="item-text">{{ad.maker ~ ' ' ~ ad.label}}
                         <strong class="float-right priceindex">{{ad.price}}E</strong></h3>
                     </div>
                     <div class="row searchitem-body">
                     <div class="col-lg-5 col-sm-6">
 
-                        <a class="" href="{{ path('ads_show', {'id': ad.id}) }}"> 
+                        <a class="" href="{{ path('bikes_show', {'id': ad.id}) }}"> 
          <p class="item-text"><strong class="float-right priceindex">{{ad.pictures|length}} <i class="fas fa-camera-retro"></i></strong></p> 
             <div style="min-width:100%;height:200px; background-size:cover;   background-position:center; background-image: url({% if ad.pictures[0] is defined %}{{ asset('images/')}}{{  ad.pictures[0] }}
     {% else %}https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg{% endif %})"> 
