--- a/templates/ads/index.html.twig
+++ b/templates/ads/index.html.twig
@@ -16,7 +16,7 @@
             {% else %}https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg{% endif %})"> 
 
         
-            <p style="class="item-text;"><strong class="float-right priceindex">{{ad.price}} €</strong></p>
+            <div class="item-text float-right""><strong class="priceindex">{{ad.price}} €</strong></div>
              
             <div style="width:100%; height:30%;position:absolute;bottom:0px; left:0px; background-color:rgba(241,164,26,0.4);">
 
