--- a/templates/ads/new.html.twig
+++ b/templates/ads/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Ads{% endblock %}
 
 {% block body %}
-    <h1>Create new Ads</h1>
+    <h1>Create new Ad</h1>
 
     {{ include('ads/_form.html.twig') }}
 
