--- a/templates/bikes/new.html.twig
+++ b/templates/bikes/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Bikes{% endblock %}
 
 {% block body %}
-    <h1>Create new Bikes</h1>
+    <h1>Create new Bike</h1>
 
     {{ include('bikes/_form.html.twig') }}
 
