--- a/templates/ads/favorites.html.twig
+++ b/templates/ads/favorites.html.twig
@@ -4,26 +4,30 @@
 
 {% block body %}
 
-    <div class="row">
         <style type="text/css">
             .bigicons{
                 display: none;
             }
         </style>
-        <div class="row py-1 ">
-           <div class="col">
+        
+        <div class="row">
+
+            <div class="col-md-3"><h2>My Favorites</h2></div>
+
+           <div class="col-md-8">
             <a style="color:rgba(241,164,26,1);" class="px-2" href="{{ path('carsfavorites') }}"><i class="fas fa-car fa-2x"> Cars</a></i>
-            <a class="px-2" href="{{ path('bikesfavorites') }}"><i class="fas fa-motorcycle fa-2x"> Bikes</a></i>
+            <a class="px-2" href="{{ path('bikesfavorites') }}">
+                <i class="fas fa-motorcycle fa-2x"> Bikes</a></i>
             <a class="px-2" href="#"><i class="fas fa-truck fa-2x"> Trucks</i></a>
            </div>
-          </div>
+
         </div>
                
       <div class="row">
 
         {% for ad in cars %}
-            <div class="col-lg-12 p-3" >  
-                <div class="row d-block"  style="background: #f5f5f5" >
+            <div class="col-md-9 py-2" >  
+               
 
                     <div class="searchitem">
                         <h3 class="item-text">{{ad.maker ~ ' ' ~ ad.model}}
@@ -32,7 +36,7 @@
                     <div class="row searchitem-body">
                     <div class="col-lg-5 col-sm-6">
 
-                        <a class="" href="{{ path('ads_show', {'id': ad.id}) }}"> 
+                        <a href="{{ path('ads_show', {'id': ad.id}) }}"> 
          <p class="item-text"><strong class="float-right priceindex">{{ad.pictures|length}} <i class="fas fa-camera-retro"></i></strong></p> 
             <div style="min-width:100%;height:200px; background-size:cover;   background-position:center; background-image: url({% if ad.pictures[0] is defined %}{{ asset('images/')}}{{  ad.pictures[0] }}
     {% else %}https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg{% endif %})"> 
@@ -41,15 +45,16 @@
             </a>
                     </div>
                     <div class="col-lg-7 col-sm-6">
-                        <div>{{ad.year}}.  |  {{ad.mileage}}km </div>
-                        <div>  {{ad.hp}} ks</div>
-                        <div>{{ad.insurance}}</div>
+                        <div>{{ad.year}}.  |  {{ad.mileage}}km  |  {{ad.fuel}}  |  {{ad.body}}</div>
+                        <div>  {{ad.hp}} ks, {{ad.gearchange}}, {{ad.aircon}}</div>
+                        <div>{{ad.door}} doors, {{ad.seats}} seats, {{ad.insurance}}</div>
                        <div>{{ad.mileage}} km</div>
                     </div>
 
+
                     </div>
 
-                </div>
+            
 
             </div>
         {% endfor %}
