--- a/templates/ads/search.html.twig
+++ b/templates/ads/search.html.twig
@@ -9,7 +9,7 @@
                 <h3>We have {{count|length}} ads</h3>
             </div>
             <div class="col-6">
-                <form action="/cardealer/public/index.php/ads/search" method="GET" class="form-inline float-right">
+                <form action="/cardealer/public/index.php/cars/search" method="GET" class="form-inline float-right">
                   <div class="form-group  px-2">
                     <select class="form-control" id="exampleFormControlSelect1" name="sort">
                       <option value="">Sort by...</option>
@@ -32,19 +32,18 @@
     <div class="row">
 
         {% for ad in ads %}
-            <div class="col-lg-12 p-3" >  
-                <div class="row d-block"  style="background: #f5f5f5" >
+            <div class="col-lg-9 py-3">  
 
                     <div class="searchitem">
-                        <h3 class="item-text">{{ad.maker ~ ' ' ~ ad.model}}
-                        <strong class="float-right priceindex">{{ad.price}}E</strong></h3>
+                        <h2 class="item-text">{{ad.maker ~ ' ' ~ ad.model}}
+                        <strong class="float-right priceindex">{{ad.price}}E</strong></h2>
                     </div>
                     <div class="row searchitem-body">
                     <div class="col-lg-5 col-sm-6">
 
                         <a class="" href="{{ path('ads_show', {'id': ad.id}) }}"> 
          <p class="item-text"><strong class="float-right priceindex">{{ad.pictures|length}} <i class="fas fa-camera-retro"></i></strong></p> 
-            <div style="min-width:100%;height:200px; background-size:cover;   background-position:center; background-image: url({% if ad.pictures[0] is defined %}{{ asset('images/')}}{{  ad.pictures[0] }}
+            <div style="min-width:100%;height:220px; background-size:cover;   background-position:center; background-image: url({% if ad.pictures[0] is defined %}{{ asset('images/')}}{{  ad.pictures[0] }}
     {% else %}https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg{% endif %})"> 
     
             </div>
@@ -59,7 +58,6 @@
 
                     </div>
 
-                </div>
 
             </div>
         {% endfor %}
