--- a/templates/bikes/favorites.html.twig
+++ b/templates/bikes/favorites.html.twig
@@ -11,7 +11,8 @@
         </style>
 
         <div class="row">
-           <div class="col">
+            <div class="col-md-3"><h2>My Favorites</h2></div>
+           <div class="col-md-8">
             <a class="px-2" href="{{ path('carsfavorites') }}"><i class="fas fa-car fa-2x"> Cars</a></i>
             <a style="color:rgba(241,164,26,1);" class="px-2" href="{{ path('bikesfavorites') }}">
                 <i class="fas fa-motorcycle fa-2x"> Bikes</a></i>
@@ -23,7 +24,6 @@
 
         {% for ad in bikes %}
             <div class="col-lg-12 p-3" >  
-                <div class="row d-block"  style="background: #f5f5f5" >
 
                     <div class="searchitem">
                         <h3 class="item-text">{{ad.maker ~ ' ' ~ ad.label}}
@@ -49,10 +49,10 @@
 
                     </div>
 
-                </div>
 
             </div>
         {% endfor %}
     </div>
         
 {% endblock %}
+
