--- a/templates/home/create.html.twig
+++ b/templates/home/create.html.twig
@@ -14,9 +14,9 @@
 </style>
 <div class="row py-1 ">
    <div class="col">
-    <a class="px-2" href="{{ path('ads_new') }}"><i class="fas fa-car fa-2x"> Cars</a></i>
-    <a class="px-2" href="{{ path('bikes_new')}}"><i class="fas fa-motorcycle fa-2x"> Bikes</a></i>
-    <a class="px-2" href="#"><i class="fas fa-truck fa-2x"> Trucks</i></a>
+    <a class="px-2" href="{{ path('ads_new') }}"><i class="fas fa-car fa-2x"> Car</a></i>
+    <a class="px-2" href="{{ path('bikes_new')}}"><i class="fas fa-motorcycle fa-2x"> Bike</a></i>
+    <a class="px-2" href="#"><i class="fas fa-truck fa-2x"> Truck</i></a>
    </div>
   </div>
 {% endblock %}
