--- a/templates/ads/show.html (copy).twig
+++ b/templates/ads/show.html (copy).twig
@@ -1,70 +1,154 @@
+{% if app.request.pathinfo starts with '/cars' %} 
+{% set vehicle = 'cars' %}
+{% endif %}
+
+{% if app.request.pathinfo starts with '/bikes' %} 
+{% set vehicle = 'bikes' %}
+{% endif %}
+
+{% if app.request.pathinfo starts with '/trucks' %} 
+{% set vehicle = 'trucks' %}
+{% endif %}
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Ads{% endblock %}
 
 {% block body %}
-    <h1>Ads</h1>
+<div class="row">
+    <div class="col-sm-8">
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ ad.id }}</td>
-            </tr>
-            <tr>
-                <th>Maker</th>
-                <td>{{ ad.maker }}</td>
-            </tr>
-            <tr>
-                <th>Model</th>
-                <td>{{ ad.model }}</td>
-            </tr>
-            <tr>
-                <th>Fuel</th>
-                <td>{{ ad.fuel }}</td>
-            </tr>
-            <tr>
-                <th>Volume</th>
-                <td>{{ ad.volume }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ ad.price }}</td>
-            </tr>
-            <tr>
-                <th>Year</th>
-                <td>{{ ad.year }}</td>
-            </tr>
-            <tr>
-                <th>Body</th>
-                <td>{{ ad.body }}</td>
-            </tr>
-            <tr>
-                <th>Pictures</th>
-                <td>{{ ad.pictures ? ad.pictures|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Equipment</th>
-                <td>{{ ad.equipment ? ad.equipment|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>About</th>
-                <td>{{ ad.about }}</td>
-            </tr>
-            <tr>
-                <th>Door</th>
-                <td>{{ ad.door }}</td>
-            </tr>
-            <tr>
-                <th>Contact</th>
-                <td>{{ ad.contact ? ad.contact|json_encode : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
+  <div>
+  <nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="{{path('ads_index')}}"><i class="fas fa-home"></i> Home</a></li>
+      <li class="breadcrumb-item"><a href="{{path('search', {'maker':ad.maker})}}">{{ad.maker}}</a></li>
+      <li class="breadcrumb-item"><a href="{{path('search', {'maker':ad.maker, 'model':ad.model})}}">{{ad.model}}</a></li>
+      <li class="breadcrumb-item"><a href="{{path('search', {'maker':ad.maker,'model':ad.model, 'body':ad.body})}}">{{ad.body|title}}</a></li>
+      <li class="breadcrumb-item"><a href="{{path('search', {'maker':ad.maker,'model':ad.model, 'body':ad.body, 'fuel':ad.fuel})}}">{{ad.fuel|title}}</a></li>
+      <li class="breadcrumb-item active" aria-current="page">{{ad.label|title}}</li>
+    </ol>
+  </nav>
+  </div>
 
-    <a href="{{ path('ads_index') }}">back to list</a>
+      {% if ad.pictures[0] is defined %}
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    {% for i in range(1, ad.pictures|length) %}
+     <li data-target="#carouselExampleIndicators" data-slide-to="{{i}}" class="active"></li>
+{% endfor %}
+  </ol>
 
-    <a href="{{ path('ads_edit', {'id': ad.id}) }}">edit</a>
+  <div class="carousel-inner">
+    {% for picture in ad.pictures %}
+    <div class="carousel-item {% if ad.pictures[0] == picture %}active {% else %}
+        {% endif %}">
+      <img class="d-block w-100" src="{{ asset('images/')}}{{  picture }}" alt="{{picture}}">
+    </div>
+    {% endfor %} 
+   
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+{% else %}
+    <div class="col-8">
+        <img src="https://image.shutterstock.com/image-illustration/black-linear-photo-camera-logo-260nw-1412111903.jpg" alt="">
+    </div>
+{% endif %}
+       
+</div>
+<div class="col-sm-4 ">
+  
+  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-    {{ include('ads/_delete_form.html.twig') }}
+  <div class="fb-share-button" data-href="{{ app.request.uri }}" data-layout="box_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+
+          <hr>
+          <div class="col"> <div><h3 class="adsection">Specs</h3></div>
+    <div > <h4 style="color:white; background-color:rgb(196, 38, 49)">Price: {{ad.price}}e</h4></div></div>
+   
+    
+
+    <ul style="list-style: none;">
+        <li>Added: {{ad.added|date('d. M Y')}}</li>
+        <li>Year: {{ad.year}}</li>
+        <li>MIleage: {{ad.mileage}} Km</li>
+        <li>Airconditioner: {{ad.aircon}}</li>
+        <li>Volume: {{ad.volume}}</li>
+        <li>Power: {{ad.hp}} hp</li>
+        <li>Year: {{ad.year}}</li>
+        <li>Fuel: {{ad.fuel}}</li>
+        <li>Bodytype: {{ad.body}}</li>
+        <li>Doors: {{ad.door}}</li>
+    </ul>
+    <hr>
+    <h3 class="adsection">Contact</h3>
+    <ul>
+      <li>{{contact.username|title}}</li>
+      <li>{{contact.telephone}}</li> 
+      <li>{{contact.address|title}}</li> 
+    </ul>
+    {% if app.user.id is defined and app.user.id != ad.contact %} <a class="btn btn-secondary" 
+    href="{{ path('message.create', {'id': ad.id}) }}">Send Message <i class="far fa-envelope"></i></a>{% endif %}
+    {% if app.user.id is defined and app.user.id == ad.contact %}<a class="btn btn-warning" 
+    href="{{ path('ads_edit', {'id': ad.id}) }}">Edit <i class="far fa-edit"></i></a>{% endif %}
+
+        
+         {% if app.user.id is defined %}
+
+           {% set foo = app.user.favorites|split(',') %}
+
+
+             {% if favorites %}
+             <a class="btn btn-danger" 
+            href="{{ path('favoriteremove', {'vehicle':vehicle, 'id': ad.id}) }}">Remove From Favorites <i class="far fa-star-half"></i></a>
+
+
+          {% else %}
+
+               <a class="btn btn-success" 
+               href="{{ path('favoriteadd', {'vehicle':vehicle, 'id': ad.id}) }}">Add To Favorites <i class="far fa-star"></i></a>
+          {% endif %}
+            {% endif %}
+
+
+</div>
+</div>
+<div class="row">
+   <hr>
+  <div class="col-lg-6">
+    <h3 class="adsection">Equipment</h3>
+        <div class="row">
+          {% for option in ad.equipment %}
+        <div class="col-2"><h6>{{option}}</h6></div>
+        {% endfor %}
+        </div>
+      </div>
+
+        <div class="col-lg-6"><h3 class="adsection">Security</h3>
+        <div class="row">
+          {% for option in ad.security %}
+        <div class="col-2"><h6>{{option}}</h6></div>
+        {% endfor %}
+        </div></div>
+        
+
+     
+  </div>
+    <div class="row">
+    <div class="col">
+        <h3 class="adsection">About</h3>
+
+     {{ad.about}}
+    </div>
+    </div>
+        
+</div>
 {% endblock %}
